--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-beautifulsoup4==4.5.1
-requests==2.12.4
 xmltodict==0.10.2
+sphinx==1.5.1
+sphinx-autobuild==0.6.0
+selenium==3.0.2
+beautifulsoup4==4.5.1
