--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,8 @@ xmltodict==0.10.2
 sphinx==1.5.1
 sphinx-autobuild==0.6.0
 selenium==3.0.2
+scipy==0.18.1
+scikit-learn==0.18.1
 recommonmark==0.4.0
+pandas==0.19.2
 beautifulsoup4==4.5.1
